force-app/main/default/objects/Opportunity/fields/SPO_GroupAccWatch__c.field-meta.xml
<CustomField>
    <fullName>SPO_GroupAccWatch__c</fullName>
    <label>Group Acc/Watch</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_SubGroup__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASSEMBLED BELTS</fullName>
            </value>
            <value>
                <fullName>HARDSIDE LUGGAGE</fullName>
            </value>
            <value>
                <fullName>NOT CATEGORIZED BELTS</fullName>
            </value>
            <value>
                <fullName>OTHER BELTS</fullName>
            </value>
            <value>
                <fullName>TO BE ASSEMBLED BELTS</fullName>
            </value>
            <value>
                <fullName>WATCHES ACCESSORIES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>