force-app/main/default/objects/Opportunity/fields/SPO_Help__c.field-meta.xml
<CustomField>
    <fullName>SPO_Help__c</fullName>
    <formula>IF(
ISPICKVAL(ApplicationSource__c, &quot;SPO&quot;),
IMAGE(
CASE ( StageName , 
&quot;Brief in progress&quot;, &quot;/resource/OrderStageImages/OrderStageImages/RequestQuotation.jpg&quot;,
&quot;Quotation in progress&quot;, &quot;/resource/OrderStageImages/OrderStageImages/CancelOrder.jpg&quot;,
&quot;Quotation submitted&quot;, &quot;/resource/OrderStageImages/OrderStageImages/ConfirmQuotation.jpg&quot;,
&quot;Quotation accepted&quot;, &quot;/resource/OrderStageImages/OrderStageImages/AddDeposit.jpg&quot;,
&quot;In progress&quot;, &quot;/resource/OrderStageImages/OrderStageImages/CloseOrder.jpg&quot;,
&quot;/s.gif&quot;),&quot;Go to Desktop for any action&quot;, 21,200),

IF(
AND(ISPICKVAL(ApplicationSource__c, &quot;PERSO&quot;),
ISPICKVAL (StageName, &quot;Creation in progress&quot;)),
IMAGE(&quot;/resource/OrderStageImages/OrderStageImages/CancelOrder.jpg&quot;,&quot;Go to Desktop for any action&quot;, 21,200), &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help</label>
    <type>Text</type>
</CustomField>