force-app/main/default/objects/Opportunity/fields/SPO_InternalWorkshopComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_InternalWorkshopComment__c</fullName>
    <label>Internal workshop comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>