force-app/main/default/objects/Opportunity/fields/SPO_Item_DimensionGroupLG__c.field-meta.xml
<CustomField>
    <fullName>SPO_Item_DimensionGroupLG__c</fullName>
    <label>Item Dimension Group LG</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_SubGroup__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>To add</fullName>
            </value>
            <value>
                <fullName>TRAVEL ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>SMALL LEATHER GOODS</fullName>
            </value>
            <value>
                <fullName>SUITCASES</fullName>
            </value>
            <value>
                <fullName>TRAVEL BAGS</fullName>
            </value>
            <value>
                <fullName>TRUNKS</fullName>
            </value>
            <value>
                <fullName>BRIEFCASES</fullName>
            </value>
            <value>
                <fullName>HANDBAGS</fullName>
            </value>
            <value>
                <fullName>BELTS</fullName>
            </value>
            <value>
                <fullName>SPARE PARTS</fullName>
            </value>
            <value>
                <fullName>ORGANIZER REFILL</fullName>
            </value>
            <value>
                <fullName>PENCIL CASE</fullName>
            </value>
            <value>
                <fullName>PAPER REFILL</fullName>
            </value>
            <value>
                <fullName>PENCIL REFILL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>