force-app/main/default/objects/Opportunity/fields/SPO_ItemDimensionGroupWatch__c.field-meta.xml
<CustomField>
    <fullName>SPO_ItemDimensionGroupWatch__c</fullName>
    <label>Item dimension group Watch</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_SubGroup__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>TBD BY LOUIS VUITTON</fullName>
            </value>
            <value>
                <fullName>WRIST GOLD 18C WATCH QUARTZ</fullName>
            </value>
            <value>
                <fullName>WRISTS FOR WATCH</fullName>
            </value>
            <value>
                <fullName>CLOCK</fullName>
            </value>
            <value>
                <fullName>WATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>