force-app/main/default/objects/Opportunity/fields/SPO_LiningColor1LocalComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_LiningColor1LocalComment__c</fullName>
    <label>Lining Color 1 local comment</label>
    <type>TextArea</type>
</CustomField>