force-app/main/default/objects/Opportunity/fields/SPO_LiningColor1ZoneApproverComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_LiningColor1ZoneApproverComment__c</fullName>
    <label>Lining Color 1 zone approver comment</label>
    <type>TextArea</type>
</CustomField>