force-app/main/default/objects/Opportunity/fields/SPO_LiningColor2LocalComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_LiningColor2LocalComment__c</fullName>
    <label>Lining Color 2 local comment</label>
    <type>TextArea</type>
</CustomField>