force-app/main/default/objects/Opportunity/fields/SPO_LiningColor2ZoneApproverComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_LiningColor2ZoneApproverComment__c</fullName>
    <label>Lining Color 2 zone approver comment</label>
    <type>TextArea</type>
</CustomField>