force-app/main/default/objects/Opportunity/fields/SPO_LiningInteriorColor2__c.field-meta.xml
<CustomField>
    <fullName>SPO_LiningInteriorColor2__c</fullName>
    <label>Lining (interior) Color 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_LiningInteriorMaterial2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agneau Aubergine</fullName>
            </value>
            <value>
                <fullName>Agneau Blanc</fullName>
            </value>
            <value>
                <fullName>Agneau Blanc Casse</fullName>
            </value>
            <value>
                <fullName>Agneau Bleu Azur</fullName>
            </value>
            <value>
                <fullName>Agneau Bleu Canard</fullName>
            </value>
            <value>
                <fullName>Agneau Bleu Marine</fullName>
            </value>
            <value>
                <fullName>Agneau Bleu Ocean</fullName>
            </value>
            <value>
                <fullName>Agneau Brun</fullName>
            </value>
            <value>
                <fullName>Agneau Capucine</fullName>
            </value>
            <value>
                <fullName>Agneau Caramel</fullName>
            </value>
            <value>
                <fullName>Agneau Cassis</fullName>
            </value>
            <value>
                <fullName>Agneau Cognac</fullName>
            </value>
            <value>
                <fullName>Agneau Grenade</fullName>
            </value>
            <value>
                <fullName>Agneau Gris Souris</fullName>
            </value>
            <value>
                <fullName>Agneau Iris Noir</fullName>
            </value>
            <value>
                <fullName>Agneau Kiwi</fullName>
            </value>
            <value>
                <fullName>Agneau Mandarine</fullName>
            </value>
            <value>
                <fullName>Agneau Moka</fullName>
            </value>
            <value>
                <fullName>Agneau Noir</fullName>
            </value>
            <value>
                <fullName>Agneau Ocre</fullName>
            </value>
            <value>
                <fullName>Agneau Pistache</fullName>
            </value>
            <value>
                <fullName>Agneau Pomme</fullName>
            </value>
            <value>
                <fullName>Agneau Rouge</fullName>
            </value>
            <value>
                <fullName>Agneau Tabac</fullName>
            </value>
            <value>
                <fullName>Agneau Taupe</fullName>
            </value>
            <value>
                <fullName>Agneau Vert Foret</fullName>
            </value>
            <value>
                <fullName>Agneau Violet</fullName>
            </value>
            <value>
                <fullName>Chevre Aubergine</fullName>
            </value>
            <value>
                <fullName>Chevre Blanc</fullName>
            </value>
            <value>
                <fullName>Chevre Blanc Casse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>