force-app/main/default/objects/Opportunity/fields/SPO_LiningInteriorMaterial1__c.field-meta.xml
<CustomField>
    <fullName>SPO_LiningInteriorMaterial1__c</fullName>
    <label>Lining (interior) Material 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_CreationType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agneau</fullName>
            </value>
            <value>
                <fullName>Chevre</fullName>
            </value>
            <value>
                <fullName>Microfibre_S</fullName>
                <label>Microfibres</label>
            </value>
            <value>
                <fullName>Mouton</fullName>
            </value>
            <value>
                <fullName>Velours</fullName>
            </value>
            <value>
                <fullName>Vgv</fullName>
            </value>
            <value>
                <fullName>Vuittonite</fullName>
            </value>
            <value>
                <fullName>Other (free text)</fullName>
            </value>
            <value>
                <fullName>Microfibre_H</fullName>
                <label>Microfibre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>