force-app/main/default/objects/Opportunity/fields/SPO_LiningMaterial1LocalComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_LiningMaterial1LocalComment__c</fullName>
    <label>Lining Material 1 local comment</label>
    <type>TextArea</type>
</CustomField>