force-app/main/default/objects/Opportunity/fields/SPO_LiningMaterial1ZoneApproverComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_LiningMaterial1ZoneApproverComment__c</fullName>
    <label>Lining Material 1 zone approver comment</label>
    <type>TextArea</type>
</CustomField>