force-app/main/default/objects/Opportunity/fields/SPO_LiningMaterial2LocalComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_LiningMaterial2LocalComment__c</fullName>
    <label>Lining Material 2 local comment Lining</label>
    <type>TextArea</type>
</CustomField>