force-app/main/default/objects/Opportunity/fields/SPO_LiningMaterial2ZoneApproverComment__c.field-meta.xml
<CustomField>
    <fullName>SPO_LiningMaterial2ZoneApproverComment__c</fullName>
    <label>Lining Material 2 zone approver  comment</label>
    <type>TextArea</type>
</CustomField>