force-app/main/default/objects/Opportunity/fields/SPO_Lock__c.field-meta.xml
<CustomField>
    <fullName>SPO_Lock__c</fullName>
    <label>Lock</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>