force-app/main/default/objects/Opportunity/fields/SPO_LockNumber__c.field-meta.xml
<CustomField>
    <fullName>SPO_LockNumber__c</fullName>
    <label>Lock Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>