force-app/main/default/objects/Opportunity/fields/SPO_MacroFamilyLG__c.field-meta.xml
<CustomField>
    <fullName>SPO_MacroFamilyLG__c</fullName>
    <label>Macro Family LG</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_MainGroupLG__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>LG ECRITURE</fullName>
            </value>
            <value>
                <fullName>BUSINESS</fullName>
            </value>
            <value>
                <fullName>WATCH ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>TRAVEL</fullName>
            </value>
            <value>
                <fullName>DIARIES</fullName>
            </value>
            <value>
                <fullName>OPTIONS</fullName>
            </value>
            <value>
                <fullName>CITY BAGS</fullName>
            </value>
            <value>
                <fullName>REFILLS</fullName>
            </value>
            <value>
                <fullName>LG ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>WRITING LG</fullName>
            </value>
            <value>
                <fullName>NOT CATEGORIZED LG</fullName>
            </value>
            <value>
                <fullName>HARDSIDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>