force-app/main/default/objects/Opportunity/fields/SPO_MacroFamilyWatchAcc__c.field-meta.xml
<CustomField>
    <fullName>SPO_MacroFamilyWatchAcc__c</fullName>
    <label>Macro Family Watch/Acc</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_FamilyWatchAcc__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>To add</fullName>
            </value>
            <value>
                <fullName>NOT CATEGORIZED (WATCHES)</fullName>
            </value>
            <value>
                <fullName>WATCHES</fullName>
            </value>
            <value>
                <fullName>WATCHES ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>BELTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>