force-app/main/default/objects/Opportunity/fields/SPO_MacroMaterial__c.field-meta.xml
<CustomField>
    <fullName>SPO_MacroMaterial__c</fullName>
    <label>Macro Material</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_MainMaterialSAP__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CANVAS</fullName>
            </value>
            <value>
                <fullName>EXOTIC LEATHER</fullName>
            </value>
            <value>
                <fullName>FEATHER</fullName>
            </value>
            <value>
                <fullName>FUR</fullName>
            </value>
            <value>
                <fullName>LEATHER</fullName>
            </value>
            <value>
                <fullName>OTHER_TBD</fullName>
            </value>
            <value>
                <fullName>PLASTIC</fullName>
            </value>
            <value>
                <fullName>RESIN</fullName>
            </value>
            <value>
                <fullName>RUBBER</fullName>
            </value>
            <value>
                <fullName>STRASS</fullName>
            </value>
            <value>
                <fullName>TEXTILE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>