force-app/main/default/objects/Opportunity/fields/SPO_MainGroupAccWa__c.field-meta.xml
<CustomField>
    <fullName>SPO_MainGroupAccWa__c</fullName>
    <label>Main Group Acc/Watch</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_GroupAccWatch__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BELTS</fullName>
            </value>
            <value>
                <fullName>WATCHES</fullName>
            </value>
            <value>
                <fullName>WATCHES ACCESSORIES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>