force-app/main/default/objects/Opportunity/fields/SPO_MainGroupLG__c.field-meta.xml
<CustomField>
    <fullName>SPO_MainGroupLG__c</fullName>
    <label>Main group LG</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_GroupLG__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>BELTS</fullName>
            </value>
            <value>
                <fullName>BUSINESS</fullName>
            </value>
            <value>
                <fullName>CITY BAGS</fullName>
            </value>
            <value>
                <fullName>LG ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>OPTIONS</fullName>
            </value>
            <value>
                <fullName>REFILLS</fullName>
            </value>
            <value>
                <fullName>TRAVEL</fullName>
            </value>
            <value>
                <fullName>WATCHES ACCESSORIES</fullName>
            </value>
            <value>
                <fullName>WRITING</fullName>
            </value>
            <value>
                <fullName>DIARIES</fullName>
            </value>
            <value>
                <fullName>HARDSIDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>