force-app/main/default/objects/Opportunity/fields/SPO_MainMaterialSAP__c.field-meta.xml
<CustomField>
    <fullName>SPO_MainMaterialSAP__c</fullName>
    <label>Main Material (SAP)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALLIGATOR MISSISSIPIENSIS</fullName>
            </value>
            <value>
                <fullName>ANACONDA</fullName>
            </value>
            <value>
                <fullName>ASTRAKHAN</fullName>
            </value>
            <value>
                <fullName>AUTRUCHE</fullName>
            </value>
            <value>
                <fullName>AYERS</fullName>
            </value>
            <value>
                <fullName>BABY GOAT</fullName>
            </value>
            <value>
                <fullName>BEAVER</fullName>
            </value>
            <value>
                <fullName>BISON</fullName>
            </value>
            <value>
                <fullName>BUCKSKIN SUEDE</fullName>
            </value>
            <value>
                <fullName>BUFFALO</fullName>
            </value>
            <value>
                <fullName>BULL</fullName>
            </value>
            <value>
                <fullName>CAIMAN</fullName>
            </value>
            <value>
                <fullName>CALF</fullName>
            </value>
            <value>
                <fullName>CANVAS</fullName>
            </value>
            <value>
                <fullName>CHINCHILLA</fullName>
            </value>
            <value>
                <fullName>COATED CANVAS</fullName>
            </value>
            <value>
                <fullName>COWHIDE</fullName>
            </value>
            <value>
                <fullName>COYOTE</fullName>
            </value>
            <value>
                <fullName>CROCODYLUS NILOTICUS</fullName>
            </value>
            <value>
                <fullName>CROCODYLUS POROSUS</fullName>
            </value>
            <value>
                <fullName>DEER</fullName>
            </value>
            <value>
                <fullName>DEERSKIN</fullName>
            </value>
            <value>
                <fullName>EELSKIN</fullName>
            </value>
            <value>
                <fullName>ELAPHE</fullName>
            </value>
            <value>
                <fullName>ELEPHANT</fullName>
            </value>
            <value>
                <fullName>ERMINE</fullName>
            </value>
            <value>
                <fullName>FINN RACOON</fullName>
            </value>
            <value>
                <fullName>FOX</fullName>
            </value>
            <value>
                <fullName>GALUCHAT</fullName>
            </value>
            <value>
                <fullName>GOAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>