force-app/main/default/objects/Opportunity/fields/SPO_ManuFacturerProcess__c.field-meta.xml
<CustomField>
    <fullName>SPO_ManuFacturerProcess__c</fullName>
    <label>Manu Facturer process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ETO ENGINEER TO ORDER</fullName>
                <default>true</default>
                <label>ETO ENGINEER TO ORDER</label>
            </value>
            <value>
                <fullName>VARIATION</fullName>
            </value>
            <value>
                <fullName>PERSO</fullName>
            </value>
            <value>
                <fullName>MTO MADE TO ORDER</fullName>
            </value>
            <value>
                <fullName>MTS MADE TO STOCK</fullName>
            </value>
            <value>
                <fullName>MTM MADE TO MEASURE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>