force-app/main/default/objects/Opportunity/fields/SPO_MarketingApproval__c.field-meta.xml
<CustomField>
    <fullName>SPO_MarketingApproval__c</fullName>
    <label>Marketing approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>