force-app/main/default/objects/Opportunity/fields/SPO_MarketingColor__c.field-meta.xml
<CustomField>
    <fullName>SPO_MarketingColor__c</fullName>
    <label>Marketing Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABRICOT</fullName>
            </value>
            <value>
                <fullName>ABYSSE</fullName>
            </value>
            <value>
                <fullName>ACACIA</fullName>
            </value>
            <value>
                <fullName>ACAJOU</fullName>
            </value>
            <value>
                <fullName>ACIER</fullName>
            </value>
            <value>
                <fullName>ALEZAN</fullName>
            </value>
            <value>
                <fullName>AMANDE</fullName>
            </value>
            <value>
                <fullName>AMANDE ELECTRIC</fullName>
            </value>
            <value>
                <fullName>AMANDE GLITTER</fullName>
            </value>
            <value>
                <fullName>AMARANTE</fullName>
            </value>
            <value>
                <fullName>AMARANTE RAYE</fullName>
            </value>
            <value>
                <fullName>AMARANTE ROSE</fullName>
            </value>
            <value>
                <fullName>AMBER</fullName>
            </value>
            <value>
                <fullName>AMETHYSTE</fullName>
            </value>
            <value>
                <fullName>ANIMAL</fullName>
            </value>
            <value>
                <fullName>ANIS</fullName>
            </value>
            <value>
                <fullName>ANTHRACITE NACRE</fullName>
            </value>
            <value>
                <fullName>ARCTIC</fullName>
            </value>
            <value>
                <fullName>ARDOISE</fullName>
            </value>
            <value>
                <fullName>ARGENT BRULE</fullName>
            </value>
            <value>
                <fullName>ARGILE</fullName>
            </value>
            <value>
                <fullName>ARMAGNAC</fullName>
            </value>
            <value>
                <fullName>ASPHALT</fullName>
            </value>
            <value>
                <fullName>AUBE</fullName>
            </value>
            <value>
                <fullName>AUBERGINE</fullName>
            </value>
            <value>
                <fullName>AURORE</fullName>
            </value>
            <value>
                <fullName>AVENTURE</fullName>
            </value>
            <value>
                <fullName>AZUR</fullName>
            </value>
            <value>
                <fullName>BABY ROSE</fullName>
            </value>
            <value>
                <fullName>BAMBOO INDIGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>