force-app/main/default/objects/Opportunity/fields/SPO_NoPersonNeeded__c.field-meta.xml
<CustomField>
    <fullName>SPO_NoPersonNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No perso needed</label>
    <type>Checkbox</type>
</CustomField>