force-app/main/default/objects/Opportunity/fields/SPO_Number_Of_decimals_Store__c.field-meta.xml
<CustomField>
    <fullName>SPO_Number_Of_decimals_Store__c</fullName>
    <label>Number Of decimals Store</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>