force-app/main/default/objects/Opportunity/fields/SPO_Numberofproductivehours__c.field-meta.xml
<CustomField>
    <fullName>SPO_Numberofproductivehours__c</fullName>
    <label>Number of productive hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>