force-app/main/default/objects/Opportunity/fields/SPO_OF__c.field-meta.xml
<CustomField>
    <fullName>SPO_OF__c</fullName>
    <label>OF</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>