force-app/main/default/objects/Opportunity/fields/SPO_OpportunityCloning__c.field-meta.xml
<CustomField>
    <fullName>SPO_OpportunityCloning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brief cloning ?</label>
    <type>Checkbox</type>
</CustomField>