force-app/main/default/objects/Opportunity/fields/SPO_OrderType__c.field-meta.xml
<CustomField>
    <fullName>SPO_OrderType__c</fullName>
    <label>Order type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_ProductCategory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Creation (Hardsided &amp; Soft)</fullName>
            </value>
            <value>
                <fullName>MTO on Catalog (Hardsided)</fullName>
            </value>
            <value>
                <fullName>SPO/MTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>