force-app/main/default/objects/Opportunity/fields/SPO_Painting__c.field-meta.xml
<CustomField>
    <fullName>SPO_Painting__c</fullName>
    <label>Painting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Heritage</fullName>
            </value>
            <value>
                <fullName>Travel Icons</fullName>
            </value>
            <value>
                <fullName>Sur Mesure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>