force-app/main/default/objects/Opportunity/fields/SPO_PaintingYN__c.field-meta.xml
<CustomField>
    <fullName>SPO_PaintingYN__c</fullName>
    <label>Patch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>