force-app/main/default/objects/Opportunity/fields/SPO_Patch__c.field-meta.xml
<CustomField>
    <fullName>SPO_Patch__c</fullName>
    <label>Patch style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Palladium stamped</fullName>
            </value>
            <value>
                <fullName>Gold Stamped</fullName>
            </value>
            <value>
                <fullName>Tone on tone embossing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>