force-app/main/default/objects/Opportunity/fields/SPO_PatchFreeText__c.field-meta.xml
<CustomField>
    <fullName>SPO_PatchFreeText__c</fullName>
    <label>Your name (Patch)</label>
    <type>TextArea</type>
</CustomField>