force-app/main/default/objects/Opportunity/fields/SPO_pdd__c.field-meta.xml
<CustomField>
    <fullName>SPO_pdd__c</fullName>
    <description>Retrieves the correct delivery date depending on whether the process requires a quotation or not</description>
    <formula>IF( hasQuotation__c, SPO_pddNOMTO__c, SPO_pddMTO__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPO_pdd</label>
    <type>Date</type>
</CustomField>